Refactor ProceedingsMapperTest assertions for consistency
Replaced `softly.assertThat` with `assertThat` for specific cases, added missing `softly.assertAll` calls, and updated method calls for list handling to improve test clarity.